--- a/src/main/resources/META-INF/resources/board.html
+++ b/src/main/resources/META-INF/resources/board.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Board Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
-        <div>TODO write content</div>
+    <body onload="init2('board')">
+        <div id='summary'>
+            <span>
+                <label>Size of queue: </label>
+                <span id="size"></span>
+            </span>
+            <br/>
+            <span>
+                <label>Now serving: </label>
+                <span id="next"></span>
+            </span>
+        </div>
+
+        <script src="queue-service.js"></script>
     </body>
 </html>
