--- a/src/main/resources/META-INF/resources/customer.html
+++ b/src/main/resources/META-INF/resources/customer.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body onload="init()">
+    <body onload="init2('customer')">
         <div id='summary'>
             <span>
                 <label>Size of queue: </label>
